--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
             name="description"
             content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="./../src/images/logo.svg"/>
+    <link rel="apple-touch-icon" href="../src/assets/images/logo.svg"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
     <title>React App</title>
